# fraud-benford

./: README.md  pyproject.toml  requirements.txt
notebook/: fraud_classifier.ipynb  fraud_classifier_postrun.ipynb
report/: report.tex
src/: __init__.py  benford.py  data.py  evaluation.py  features.py  models.py
