[project]
name = "fraud-benford"
version = "0.1.0"
description = "Credit card fraud detection with Benford's Law and sequence-inspired features"
requires-python = ">=3.11"
dependencies = [
    "scikit-learn>=1.4",
    "xgboost>=2.0",
    "lightgbm>=4.0",
    "matplotlib>=3.7",
    "seaborn>=0.13",
    "pandas>=2.0",
    "numpy>=1.24",
    "torch>=2.0",
    "jupyter>=1.0",
    "ipykernel>=6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
